[package]
name = "rust-chip"
version = "0.1.0"
edition = "2021"

description = "A highly experimental Rust-based CHIP8 emulator, with web and desktop support and hardware-accelerated rendering."
license = "MIT"
repository = "https://github.com/jo12bar/rust-chip"

[dependencies]
bytemuck = { version = "1.12.3", features = ["derive"] }
color-eyre = "0.6.2"
image = { version = "0.24.4", default-features = false }
serde = { version = "1.0.147", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.37"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "time"] }

[dependencies.egui]
git = "https://github.com/emilk/egui"
rev = "502e1aa22952aeae48dadff9fa916a94114276e8"

[dependencies.eframe]
git = "https://github.com/emilk/egui"
rev = "502e1aa22952aeae48dadff9fa916a94114276e8"
default_features = false
features = [
    "persistence",
    "wgpu",
    "dark-light",
    "default_fonts"
]

# Enable *some* optimizations in debug mode
[profile.dev]
opt-level = 1

# Enable link-time optimizations for release builds
[profile.release]
lto = "thin"
